[gd_scene load_steps=3 format=3 uid="uid://bdmsj6dhvu586"]

[ext_resource type="Script" uid="uid://cpbskqy4iy1mc" path="res://main/ui/main_sidebar.gd" id="1"]
[ext_resource type="Script" uid="uid://b3g1qmcxr7jru" path="res://shared/ui/component/buttons/btn_sidebar_button.gd" id="2"]

[node name="Sidebar" type="PanelContainer"]
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BtnPeople" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "People"
script = ExtResource("2")
button_text = "People"

[node name="BtnLaws" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Laws"
script = ExtResource("2")
button_text = "Laws"

[node name="BtnLand" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Land"
script = ExtResource("2")
button_text = "Land"

[node name="BtnEconomy" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Economy"
script = ExtResource("2")
button_text = "Economy"
